@startuml
!theme mono

class EmailClassifierFacade {
    - base_embedding: BaseEmbedding
}

class EmbeddingsFactory {
    + create_embeddings(embedding_type: str): BaseEmbeddings
}

class SentenceTransformerEmbeddings {
}

class TfidfEmbeddings {
    vectorizer_interaction: TfidfVectorizer
    vectorizer_summary: TfidfVectorizer
}

class TfidfSentenceEmbeddings {
    vectorizer_interaction: TfidfVectorizer
    vectorizer_summary: TfidfVectorizer
}

interface BaseEmbedding {
    + create_training_embeddings(df: DataFrame): np.ndarray
    + create_classification_embeddings(df: DataFrame): np.ndarray
}

EmailClassifierFacade o-- BaseEmbedding
EmailClassifierFacade --> EmbeddingsFactory: uses
EmbeddingsFactory ..> BaseEmbedding : creates
BaseEmbedding <|-- SentenceTransformerEmbeddings
BaseEmbedding <|-- TfidfEmbeddings
BaseEmbedding <|-- TfidfSentenceEmbeddings

@enduml
